# SetBitCount

./: LICENSE  README.md  pyproject.toml  setbitcounter.py
setbitcounter/: __init__.py  countsetbit.py
