[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "setbitcounter-pkg"
version = "1.1.0"
description = "Count set bits in a number or range of natural numbers"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Diksha Rawat"}
]
keywords = ["bits", "binary", "setbits", "bitcount"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/diksha-rawat/SetBitCount"
